2000-11-15  Stephen F. Booth  <sbooth@gnu.org>

	* Makefile.am: Added cgicc.m4 to EXTRA_DIST

2000-11-14  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc.m4: New file
	* acinclude.m4: Moved cgicc macros to cgicc.m4, include(cgicc.m4)
	* cgicc.m4: Use cgicc_{libdir,includedir} instead of
	CGICC_{LIBDIR,INCLUDEDIR}
	* Makefile.am:  Use cgicc_{libdir,includedir} instead of
	CGICC_{LIBDIR,INCLUDEDIR}
	* configure.in: Check validity of --with-cgicc

2000-11-13  Stephen F. Booth  <sbooth@gnu.org>

	* AUTHORS: New file for cgicc-example package
	* ChangeLog: New file for cgicc-example package
	* Makefile.am: New file for cgicc-example package
	* NEWS: New file for cgicc-example package
	* README: Updated for cgicc-example package
	* acinclude.m4: New file for cgicc-example package
	* autogen: New file for cgicc-example package
	* configure.in: New file for cgicc-example package
	* example.cpp: New file for cgicc-example package
