@@ -1,9 +1,10 @@
 dnl -*-m4-*-
-dnl $Id: configure.in,v 1.3 2000/11/15 06:45:51 sbooth Exp $
+dnl $Id: configure.in,v 1.4 2001/09/02 19:58:34 sbooth Exp $
 
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.3 $)
+AC_REVISION($Revision: 1.4 $)
 AC_INIT(example.cpp)
+AC_PREFIX_DEFAULT(/usr)
 AM_INIT_AUTOMAKE(cgicc-example, 0.1)
 
 AC_LANG_CPLUSPLUS
@@ -11,7 +12,6 @@ AC_LANG_CPLUSPLUS
 dnl Checks for programs.
 AC_PROG_CXX
 AC_PROG_INSTALL
-AM_PROG_LIBTOOL
 
 dnl Checks for libraries.
 
